2004-08-03  Mikael Hallendal  <micke@imendio.com>

	* Synced from SVN. Going to continue working on it here.

2004-06-15  Mikael Hallendal  <micke@imendio.com>

	* README: Updated GnuTLS dependency.
	* mono/*: Some work on the mono bindings.

2004-05-28  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
	- Correctly inform whether SSL support was enabled or not.

2004-05-28  Mikael Hallendal  <micke@imendio.com>

	* src/lm-sha.c: Fixed lvalue cast that wasn't approved by newer GCC.

2004-05-10  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Enable Mono on request
	
	* mono/*: 
	- Updated the bindings some.
	- Removed the autogenerated, it's such a small API that I figured
	  it was easier to wrap it manually.

2004-04-30  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-parser.c (parser_end_node_cb): Unref the message node.

2004-04-29  Mikael Hallendal  <micke@imendio.com>

	* examples/lm-change-password.c:
	* examples/Makefile.am:
	- Added a small tool to change the password on a jabber account.

2004-04-27  Mikael Hallendal  <micke@imendio.com>

	* Ignore on autogenerated files.

2004-04-20  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/*.[ch]: Updated copyright information

2004-04-20  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Now depend on Glib 2.4
	* loudmouth/lm-queue.[ch]: Removed, use the new GQueue in Glib 2.4
	* loudmouth/lm-connection.[ch]: Use GQueue instead of LmQueue.

2004-04-16  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Added libtasn1 requirement
	* loudmouth.spec.in: Added requirement on libtasn if built with SSL.

2004-04-04  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-sha.c: Commited compile fix from Sjoerd.

2004-03-20  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/loudmouth-sections.txt:
	- Added lm_connection_get_state
	- Added LmConnectionState

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* Synced from SVN.

	* Released 0.16
	