@@ -5,6 +5,7 @@ INCLUDES =                                         \
 noinst_PROGRAMS =                                  \
 	test-lm                                    \
 	test-http-proxy                            \
+	test-tunnel                                \
 	lm-send-sync                               \
 	lm-send-async                              \
 	lm-change-password
@@ -12,6 +13,8 @@ noinst_PROGRAMS =                                  \
 test_lm_SOURCES = test-lm.c
 
 test_http_proxy_SOURCES = test-http-proxy.c
+
+test_tunnel_SOURCES = test-tunnel.c
 
 lm_send_sync_SOURCES = lm-send-sync.c
 
